--- a/package.json
+++ b/package.json
@@ -2,26 +2,24 @@
   "name": "propromo.dev",
   "version": "0.0.0",
   "author": "",
-
   "main": "build/index.js",
-
-  "dependencies": {},
-
+  "dependencies": {
+    "hyper-express": "^6.15.2"
+  },
   "devDependencies": {
     "gulp": "^3.6.2",
-    "gulp-tsc": "^0.10.1",
     "gulp-shell": "^0.4.2",
+    "gulp-tsc": "^0.10.1",
     "gulp-tslint": "^2.0.0",
-    "run-sequence":"^1.1.1",
-    "mocha" : "*"
+    "mocha": "*",
+    "run-sequence": "^1.1.1"
   },
-
   "overrides": {
     "graceful-fs": "^4.2.11"
   },
-
-  "scripts" : {
-    "main" : "gulp buildrun",
-    "test": "gulp build && mocha"
+  "scripts": {
+    "main": "gulp buildrun",
+    "test": "gulp build && mocha",
+    "watch": "gulp watch"
   }
 }
