added port option

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+PORT="8080"
 DEV_MODE="true"
 HEROKU_API_TOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 DEV_ACCESS_PASSPHRASE="xxxxxxxxxxxxxxxxxxxxxxxxxxx"
